--- a/dom.css
+++ b/dom.css
@@ -11,7 +11,8 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
+    overflow: hidden;
 }
 .h1{
     text-align: center;
@@ -51,20 +52,22 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px 5px;
     cursor: pointer;
 }
 .bottom button{
     border-radius: 20px;
     border: none;
+    padding: 10px 20px;
 }
 .input1 input{
     border-radius: 20px;
-    border: none;
+    padding: 10px 35px;
+    border: 1px solid white;
 }
 .input2 input{
+    padding: 10px 35px;
     border-radius: 20px;
-    border: none;
+    border: 1px solid white;
 }
 .input1 p{
     color: white;
@@ -102,9 +105,15 @@ button{
         width: 80%;
         font-size: 35px;
     }
+    main{
+        width: 100%;
+        height: 100vh;
+    }
     .middle{
         gap: 20px;
         flex-direction: column;
+        /* width: 100%; */
+        /* height: 100vh; */
     }
     .input1{
         gap: 10px;
