--- a/dom.css
+++ b/dom.css
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    width: 100%;
+    height: 100%;
+}
 main{
     background: linear-gradient(red, orange);
     width: 100%;
@@ -71,9 +75,11 @@ main{
 }
 .input1 p{
     color: white;
+    font-size: 30px;
 }
 .input2 p{
     color: white;
+    font-size: 30px;
 }
 .input1 input{
     text-align: center;
@@ -112,8 +118,6 @@ button{
     .middle{
         gap: 20px;
         flex-direction: column;
-        /* width: 100%; */
-        /* height: 100vh; */
     }
     .input1{
         gap: 10px;
